# yaocptool

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CSTRColumn_NMPC_DirectMethod.py  NMPC_AugmentedLagrange.py  NMPC_AugmentedLagrange_gambi.py  NMPC_DirectMethod.py  NMPC_DirectMethod_gambi.py  NMPC_IndirectMethod.py  NMPC_InteriorPoint.py  NMPC_InteriorPoint_gambi.py  NMPC_SaturationFunction.py  NMPC_SaturationFunction_gambi.py  README.md  aug_lag.txt  gen.c  gen.exp  gen.lib  genindex.html  index.html  metadata.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  yaocptool.estimation.html  yaocptool.html  yaocptool.methods.base.html  yaocptool.methods.classic.html  yaocptool.methods.html  yaocptool.methods.network.html  yaocptool.modelling.html  yaocptool.modelling.mixins.html  yaocptool.modelling.network.html  (+5 more)
_modules/: index.html
_sources/: index.rst.txt  yaocptool.estimation.rst.txt  yaocptool.methods.base.rst.txt  yaocptool.methods.classic.rst.txt  yaocptool.methods.network.rst.txt  yaocptool.methods.rst.txt  yaocptool.modelling.mixins.rst.txt  yaocptool.modelling.network.rst.txt  yaocptool.modelling.rst.txt  yaocptool.mpc.rst.txt  yaocptool.parallel.rst.txt  yaocptool.rst.txt  yaocptool.stochastic.rst.txt
_static/: documentation_options.js
docs/: Makefile  _conf.py  conf.py  make.bat  requirements.txt
examples/: admm_with_multiple_processes.py  composing_models.py  mpc_example.py  nlp.py  pce_example.py  readme_code.py  run_all_examples.py  simple_tank.py
(+241 files in other folders)
