[tool.poetry]
name = "YaOCPTool"
version = "0.3.8"
description = ""
authors = ["Marco Aguiar <marcoaaguiar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# yaocptool = {path='./yaocptool/', develop=true}
python = "^3.8"
casadi = "^3.5.5"
numpy = "^1.20.0"
scipy = "^1.6.0"
matplotlib = "^3.3.4"
networkx = "^2.5"
seaborn = "^0.11.1"
ipdb = "^0.13.5"
ray = "^1.2.0"
erised = {git = "https://github.com/marcoaaguiar/erised.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "latest"
pytest = "^6.2.2"
mypy = "latest"
rope = "^0.18.0"
ipdb = "^0.13.5"
ipython = "^7.21.0"
pandas-stubs = "^1.0.4"
pyflakes = "^2.3.1"
autoflake = "^1.4"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
